# hr_system

./: .gitignore  README.md  generate_sample_excel.py  pyproject.toml  sample_import.xlsx
hr_system/: asgi.py  settings.py  urls.py  wsgi.py
workers/: admin.py  constants.py  models.py  permissions.py  serializers.py  urls.py  views.py
workers/migrations/: 0001_initial.py  0002_alter_worker_options_alter_worker_created_by_and_more.py
workers/tests/: test_import.py  test_models.py  test_views.py
